fixed link gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://srtrace.github.io/CryptoApp/",
+  "homepage": "https://srtrace.github.io/MovieApp/",
   "name": "26-movie-app",
   "version": "0.1.0",
   "private": true,
